src/test/contracts/negative/modules_access_not_open2.mligo
let x = A.B.(x + y)
